# scripts

./: .editorconfig  .gitignore  README.md  br-keys  br-search  desktop  dwm-session  flags  list-path  markpdf  mongo  mysql  package-lock.json  package.json  rmarkdown-pdf  rmd  send-json  tsconfig.json  window
desktop/: README.md  desktop.sh  left.sh  right.sh  window.sh
docs/: index.html  style.css
src/: br-keys.sh  br-search.sh  dwm-session  list-path.sh  markdown-pdf.sh  parseFlags.js  window.sh
src/awk/: Makefile  format_nocolor.awk
src/c/: Makefile  config.mk  main.c  notify_me.c  recurse_tty.c  start_session.c  symlink.c  ttyname.c  volume.c  volume_alsa.c
src/coffee/: Cakefile  list_containers.coffee  package.json
src/node/: Jakefile  Makefile  createJavaClass.js  create_java_class.js  getJobs.js  get_jobs.js  links.txt  listContainers.js  package.json  parse_flags.js  typeJobs.ts  type_jobs.ts
src/python/: Makefile  create_file.py  edit_stream.py  exec_c.py  get_options.py  handle_toml.py  handle_yaml.py  heros.yml  link_steam_games.py  links.txt  log.html  netscript.py  pipefox.py  requirements.txt  update_clock.py  update_discord.py  use_python_from_venv.c  vim_plug.py  vipe.py  xmls.py
src/r/: DESCRIPTION  Makefile  links.txt  mongo.R  rmarkdown_pdf.R
src/rust/: Cargo.toml  Makefile  get_language.rs  get_option.rs  list_containers.rs  read_csv.rs  show_clock_icon.rs  show_time.rs  update_clock.rs
src/sh/: Makefile  br_keys.sh  br_search.sh  format_color.awk  format_nocolor.awk  git_log.sh  kill_emacs.sh  lgcc.sh  links.txt  list_path.sh  (+9 more)
(+7 files in other folders)
