[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
comfy-table = "6.1.3"
clap = "4.0.32"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.23"

[[bin]]
name = "list-containers"
path = "list_containers.rs"

[[bin]]
name = "get-option"
path = "get_option.rs"

[[bin]]
name = "show-clock-icon"
path = "show_clock_icon.rs"

[[bin]]
name = "get-language"
path = "get_language.rs"
